<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    tools:context=".activity.ImageSegmentationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/black_back"
            android:text="@string/back"
            android:padding="@dimen/icon_back_margin"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/toolbar_back_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/fragment_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background_substitution"
                    android:textSize="@dimen/tab_title_text_size"
                    android:textColor="@color/button_background"
                    android:layout_centerInParent="true"
                    />
                <View
                    android:id="@+id/line_one"
                    android:layout_below="@+id/fragment_one"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_alignLeft="@+id/fragment_one"
                    android:layout_alignRight="@+id/fragment_one"
                    android:layout_marginTop="10dp"
                    android:background="@color/button_background"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/fragment_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cutout"
                    android:textSize="@dimen/tab_title_text_size"
                    android:textColor="@color/secondary_text_color"
                    android:layout_centerInParent="true"
                    />

                <View
                    android:id="@+id/line_two"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_below="@+id/fragment_two"
                    android:layout_alignLeft="@+id/fragment_two"
                    android:layout_alignRight="@+id/fragment_two"
                    android:layout_marginTop="10dp"
                    android:background="@color/button_background"
                    android:visibility="gone" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/fragment_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_segmentation"
                    android:textSize="@dimen/tab_title_text_size"
                    android:textColor="@color/secondary_text_color"
                    android:layout_centerInParent="true"
                    />
                <View
                    android:id="@+id/line_three"
                    android:layout_below="@+id/fragment_three"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_alignLeft="@+id/fragment_three"
                    android:layout_alignRight="@+id/fragment_three"
                    android:layout_marginTop="10dp"
                    android:background="@color/button_background"
                    android:visibility="gone"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:background="@color/primary_background"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>